# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
include/: checker.h  ps.h  pushswap.h
include/ps/: op.h  ps.h  sort.h  stack.h
src/: checker.c  checker.h  draw.c  list.c  op.c  operate.c  opti.c  ps.c  push_swap.c  pushswap.c  sort.c  stack.c  utils.c  validate.c  verbose.c
